Avoid too much height on path bar (dont wrap)

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -115,7 +115,6 @@ pre {
 
 .sidebar-content button {
     width: 100%;
-    color: #eee;
     text-align: left;
     padding:  8px;
     margin: 1px 0;
@@ -125,6 +124,7 @@ pre {
     background: transparent;
     cursor: pointer;
     line-height: 1;
+    color: #eee;
 }
 .sidebar-content button:disabled {
     color: #666;
@@ -186,12 +186,17 @@ pre {
 .path-title {
     flex: 1;
     font-weight: 600;
-    color: #e0e0e0;
     font-family: monospace;
     font-size: 14px;
     background: #444;
     border-radius: 9px;
     padding: 4px 8px 4px 8px;
+    /* Hide start */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    direction: rtl;
+    text-align: left;
 }
 
 /* -------------------------
@@ -236,10 +241,8 @@ pre {
     font-family: sans-serif;
     max-width: 100vw;
 }
-.load_container h1,
-.load_container h3 {
+.load_container h1 {
     margin: 0;
-    color: #e0e0e0;
     text-align: center;
     letter-spacing: 1px;
     animation: textFade 1.5s ease-in-out infinite alternate;
@@ -298,6 +301,9 @@ pre {
     .main-container { 
         display: none;
     }
+    .load_container { 
+        display: none;
+    }
 }
 @media (max-width:1200px) {
     .filename { 
@@ -320,6 +326,11 @@ pre {
     }
     #sidebar.open {
         transform: translateX(0);
+    }
+}
+@media (max-width:400px) {
+    .load_container h1 {
+        font-size: 1.5em;
     }
 }
 
